Project - React Technical Test (Consume Facts, Random Cat Images & Basic Testing)

--- a/projects/04-react-technical-test/src/App.css
+++ b/projects/04-react-technical-test/src/App.css
@@ -8,8 +8,8 @@ main {
     font-family: system-ui;
 }
 
-
 /* Row */
+/* 
 section {
     display: flex;
     justify-content: space-between;
@@ -24,4 +24,5 @@ section p {
 section img {
     max-width: 320px;
     height: auto;
-}
+}  */
+
